--- a/main.css
+++ b/main.css
@@ -1,13 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Fira+Mono:regular);
 html,
 body {
   height: 100%;
 }
 
 body {
+  font-family: Fira Mono;
+  font-size: 2em;
   margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: inline;
   /* This centers our sketch horizontally. */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
